[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/InputLine.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/TextWindow.gd" type="Script" id=3]
[ext_resource path="res://BackgroundResources/TextWindowStyle.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.309804, 0.384314, 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="TextWindow" type="VBoxContainer"]
margin_right = 482.0
margin_bottom = 560.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 3
custom_constants/separation = 15
script = ExtResource( 3 )

[node name="InfoPanel" type="PanelContainer" parent="."]
margin_right = 482.0
margin_bottom = 495.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 4 )

[node name="Margins" type="MarginContainer" parent="InfoPanel"]
margin_right = 482.0
margin_bottom = 495.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Scroll" type="ScrollContainer" parent="InfoPanel/Margins"]
margin_left = 5.0
margin_top = 5.0
margin_right = 477.0
margin_bottom = 490.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="InfoPanel/Margins/Scroll"]
margin_right = 472.0
margin_bottom = 485.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="InputPanel" type="PanelContainer" parent="."]
margin_top = 510.0
margin_right = 482.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="InputPanel"]
margin_right = 482.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="InputPanel/HBoxContainer"]
margin_top = 11.0
margin_right = 36.0
margin_bottom = 38.0
rect_min_size = Vector2( 20, 0 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 4 )
text = " > "

[node name="InputLine" type="LineEdit" parent="InputPanel/HBoxContainer"]
margin_left = 40.0
margin_right = 482.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
max_length = 20
script = ExtResource( 1 )

[connection signal="text_entered" from="InputPanel/HBoxContainer/InputLine" to="." method="_on_InputLine_text_entered"]
[connection signal="text_entered" from="InputPanel/HBoxContainer/InputLine" to="InputPanel/HBoxContainer/InputLine" method="_on_InputLine_text_entered"]
